--- a/SpringBootSuperFinal-master/SpringBootFinal-master1/springboot3-main/PP_3_1_3_Boot_Security-master/PP_3_1_2_Boot_Security-master/src/main/resources/templates/user.html
+++ b/SpringBootSuperFinal-master/SpringBootFinal-master1/springboot3-main/PP_3_1_3_Boot_Security-master/PP_3_1_2_Boot_Security-master/src/main/resources/templates/user.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>User Profile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="/css/user.css" rel="stylesheet">
 </head>
 <body>
@@ -32,6 +33,8 @@
         </div>
     </main>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/js.js"></script>
 </body>
 </html>
